[package]
name = "demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
walkers = { path = "../walkers" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
rand = { version = "0.8", features = ["std_rng"] } # StdRng + SeedableRng
wgpu.workspace = true

[features]
default = []
vector_tiles = ["walkers/vector_tiles"]
rstar-cluster = ["walkers/rstar-cluster"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
