[package]
name = "demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
walkers.workspace = true
walkers_extras.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
rand = { version = "0.9", features = ["std_rng"] } # StdRng + SeedableRng
wgpu.workspace = true

[features]
default = []
vector_tiles = ["walkers/vector_tiles"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native desktop only (exclude wasm and android)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = "0.15"
