[package]
name = "demo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
demo = { path = "../demo" }
eframe = "0.22"
egui = "0.22"
log = "0.4"
env_logger = "0.10"
wasm-bindgen-futures = "0.4"
