[package]
name = "hypermocker"
edition = "2021"
version.workspace = true

[dependencies]
hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1.28", features = ["macros"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[dev-dependencies]
reqwest = "0.11"
futures = "0.3.28"
