[package]
name = "hypermocker"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45", features = ["macros"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4"

[dev-dependencies]
reqwest = "0.12"
futures = "0.3.28"
env_logger = "0.11"
tokio-test = "0.4.3"
