[package]
name = "hypermocker"
edition.workspace = true
version = "0.1.0"
publish = false

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.49", features = ["macros"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4"

[dev-dependencies]
reqwest = "0.12"
futures = "0.3.31"
env_logger = "0.11"
tokio-test = "0.4.4"
