[package]
name = "walkers"
version.workspace = true
repository = "https://github.com/podusowski/walkers"
description = "slippy map widget for egui"
keywords = ["gis", "geography", "gui"]
categories = ["gui", "science::geo"]
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"
edition.workspace = true

[dependencies]
log.workspace = true
egui.workspace = true
egui_extras.workspace = true
lru = "0.16"
thiserror = "2"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
geo-types = { version = "0.7" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
futures = "0.3.31"
serde = { version = "1", features = ["derive"], optional = true }
reqwest-middleware = "0.4.2"

# Vector tiles
pmtiles = { version = "0.18.0", default-features = false, features = [
    "mmap-async-tokio",
], optional = true }
mvt-reader = { version = "2.1.0", optional = true }
flate2 = { version = "1.1.4", optional = true }
earcut = { version = "0.4.4", optional = true }

lyon_tessellation = "1.0"
lyon_path = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = "1"
http-cache-reqwest = "0.16.0"

[dev-dependencies]
eframe.workspace = true
env_logger = "0.11"
approx = "0.5"
hypermocker = { path = "../hypermocker" }

[features]
default = []
serde = ["dep:serde", "geo-types/serde", "egui/serde"]
vector_tiles = ["dep:pmtiles", "dep:mvt-reader", "dep:flate2", "dep:earcut"]
