[package]
name = "walkers_extras"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository = "https://github.com/podusowski/walkers"
description = "extra functionalities for walkers crate"
keywords = ["gis", "geography", "gui"]
categories = ["gui", "science::geo"]
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"

[dependencies]
walkers.workspace = true
egui.workspace = true
rstar = "0.12"
