[package]
name = "walkers_extras"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository = "https://github.com/podusowski/walkers"
description = "extra functionalities for walkers crate"
keywords = ["geography", "gis", "gui"]
categories = ["gui", "science::geo"]
authors = ["Piotr Podusowski <podusowski@gmail.com>"]
license = "MIT"

[dependencies]
egui.workspace = true
kml = "0.12.0"
lyon_path = "1.0"
lyon_tessellation = "1.0"
quick-xml = "0.37"
rstar = "0.12"
thiserror = "2"
walkers = { workspace = true, features = ["mvt"] }
