[package]
name = "walkers_extras"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "extra functionalities for walkers crate"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
egui.workspace = true
kml = { version = "0.12.0", default-features = false }
log.workspace = true
lyon_path = "1.0"
lyon_tessellation = "1.0"
quick-xml = "0.37"
rstar = "0.12"
thiserror = "2"
walkers = { workspace = true, features = ["mvt"] }
