[package]
name = "walkers_gpx"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpx = "0.9.1"
walkers = { path = "../walkers" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true