[package]
name = "demo_android"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
log = "0.4"
android_logger = "0.13"
jni = "*"
eframe.workspace = true
egui-winit.workspace = true
ndk-context = "*"
demo = { path = "../../demo" }
thiserror = "1.0.40"

[lib]
name = "main"
crate_type = ["cdylib"]
