[package]
name = "demo_android"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
log = "0.4"
android_logger = "0.14"
jni = "*"
eframe = { workspace = true, features = ["wgpu", "android-game-activity"] }
egui-winit.workspace = true
ndk-context = "*"
demo = { path = "../../demo" }
thiserror = "2.0.3"

[lib]
name = "main"
crate-type = ["cdylib"]
