[package]
name = "demo_android"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
log = "0.4"
android_logger = "0.15"
eframe = { workspace = true, features = ["wgpu", "android-game-activity"] }
egui-winit.workspace = true
demo = { path = "../../demo" }

[lib]
name = "main"
crate-type = ["cdylib"]
